--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,24 +1,25 @@
-name: Build and Push Docker Image to Docker Hub
+name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ] # Trigger on pushes to the 'main' branch
+    branches: [ master ] # Trigger on pushes to the 'main' branch
   pull_request:
-    branches: [ "master" ] # Also trigger on pull requests to 'main' (optional, for testing build)
+    branches: [ master ] # Also trigger on pull requests to 'main' (optional, for testing build)
 
 env:
-  DOCKER_IMAGE_NAME: m3u-epg-checker
+  DOCKER_HUB_USERNAME: rcvaughn2 # Your Docker Hub username
+  IMAGE_NAME: m3u-epg-checker # The name of your Docker image on Docker Hub
 
 jobs:
-  build-and-push:
+  build_and_push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write # Needed for pushing packages (even to Docker Hub sometimes)
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -26,28 +27,16 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-    - name: Set up QEMU # Required for cross-platform emulation during build
-      uses: docker/setup-qemu-action@v3
-      with:
-        platforms: all # Enable emulation for all supported platforms
-
-    - name: Set up Docker Buildx # Buildx is essential for multi-platform builds
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build and push Multi-Arch Docker image
+    - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
         push: true
-        platforms: linux/amd64,linux/arm64/v8 # Build for both Intel/AMD and ARM
-        tags: | # Use multiline for multiple tags
-          ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-          ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }} # Tag with commit SHA for specific versions
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        tags: |
+          ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} # Tag with commit SHA for specific versions
 
     - name: Verify pushed image (optional)
       run: |
-        echo "Image ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest and ${{ github.sha }} tags pushed successfully!"
-        # To verify multi-arch images, you'd typically use `docker buildx imagetools inspect`
-        # For simplicity, just confirming the push message here.
+        echo "Image ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest pushed successfully!"
+        # You could add docker pull commands here to verify the image is pullable
