--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,32 +1,25 @@
 name: Docker Image CI
-
 on:
   push:
-    branches: [ master ] # Trigger on pushes to the 'main' branch
+    branches: [ master ]
   pull_request:
-    branches: [ master ] # Also trigger on pull requests to 'main' (optional, for testing build)
-
+    branches: [ master ]
 env:
-  DOCKER_HUB_USERNAME: rcvaughn2 # Your Docker Hub username
-  IMAGE_NAME: m3u-epg-checker # The name of your Docker image on Docker Hub
-
+  DOCKER_HUB_USERNAME: rcvaughn2
+  IMAGE_NAME: m3u-epg-checker
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
@@ -34,9 +27,8 @@ jobs:
         push: true
         tags: |
           ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} # Tag with commit SHA for specific versions
-
+          ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        platforms: linux/amd64,linux/arm64
     - name: Verify pushed image (optional)
       run: |
         echo "Image ${{ env.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest pushed successfully!"
-        # You could add docker pull commands here to verify the image is pullable
